fix 2024_02_02 09:13 GenreServiceImpl corrected